fix contrast

--- a/themes/index/assets/css/main.css
+++ b/themes/index/assets/css/main.css
@@ -26,7 +26,7 @@ footer {
 }
 
 a {
-  border-bottom: 2px solid #666;
+  border-bottom: 2px solid #333;
   color: #333;
   padding: 0 0px;
   text-decoration: none;
@@ -38,7 +38,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  background-color: #666;
+  background-color: #333;
   color: pink;
   transition: color 100ms linear;
   transition: background-color 100ms linear;
@@ -124,5 +124,5 @@ header,
 
 ::selection { 
   color: pink;
-  background: #666;
+  background: #333;
 }
